# mgx-demo

./: .MGXEnv.json  .env.example  .gitignore  .timeline.json  .wiki.md  Makefile  README.md  docker-compose.yml  package.json  turbo.json
apps/backend/: README.md  pyproject.toml
apps/backend/agents/: README.md  __init__.py
apps/backend/agents/agents/: __init__.py  base.py  team.py
apps/backend/agents/config/: __init__.py  registry.py
apps/backend/agents/container/: README.md  __init__.py  watchers.py
apps/backend/agents/context/: __init__.py  models.py  providers.py  state.py
apps/backend/agents/llm/: __init__.py  providers.py  service.py
apps/backend/agents/prompts/: __init__.py  alex.py  bob.py  emma.py  iris.py  mike.py
apps/backend/agents/runtime/: __init__.py  executor.py  orchestrator.py
apps/backend/agents/storage/: __init__.py  file_session_state_store.py  session_state_store.py
apps/backend/agents/stream/: __init__.py  context.py  events.py
apps/backend/agents/tools/: __init__.py  adapters.py  events.py  executor.py  factory.py  file_write.py  registry.py
apps/backend/agents/utils/: __init__.py  file_blocks.py  llm_logger.py  shell_blocks.py
apps/backend/agents/workflows/: __init__.py  default.py  orchestrator.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py
apps/backend/app/dependencies/: auth.py
apps/backend/app/models/: __init__.py  auth.py  chat.py
apps/backend/app/services/: __init__.py  _container_loader.py  agent_runtime.py  auth.py  container.py  (+8 more)
apps/backend/shared/: __init__.py  types.py
(+189 files in other folders)
