[project]
name = "mgx-backend"
version = "0.1.0"
description = "FastAPI backend for the MGX multi-agent workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.8.0",
  "email-validator>=2.1.1",
  "openai>=1.35.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "pytest>=8.3.0"
]

[tool.uv]
dev-dependencies = ["mgx-backend[dev]"]

[tool.ruff]
line-length = 100
target-version = "py311"
